# manic_app

manic_app/: manic_db.sql  pyproject.toml
manic_app/djangoProject/: settings.py  urls.py
manic_app/manicapp/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
manic_app/manicapp/migrations/: 0001_initial.py  0002_alter_service_price_alter_service_table.py  0003_client.py  0004_takenservice_freedate.py  0005_remove_takenservice_status_and_more.py  0006_alter_client_client_id_alter_freedate_freedate_id_and_more.py  0007_iscreateddate_rename_takenserv_id_freedate_takenserv_and_more.py  0008_isdeleteddate.py
manic_app/manicapp/static/: about.css  admin.css  admin_script.js  login.css  login_script.js  main.css  nav-footer.css  script.js  service.css  style-base.css  style-finals.css  style-main-booking.css  style-nav-footer.css  style.css  test.js
manic_app/manicapp/templates/: about.html  foradmin745H7egq.html  index.html  login.html  service.html
