[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["a.makarova <a.makarova@1440.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
mod-wsgi = "^5.0.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
